# dFUSE

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build_with_sundials.sh  pyproject.toml  setup.py
.github/workflows/: build-dist.yml  ci.yml  python-tests.yml
data/domain_Bow_at_Banff_lumped_era5/settings/FUSE/: fm_catch.txt  fuse_zDecisions_run_1.txt
data/domain_Bow_at_Banff_lumped_era5/simulations/run_1/FUSE/: Bow_at_Banff_lumped_era5_run_1_dfuse.nc  Bow_at_Banff_lumped_era5_run_1_para_def.nc  Bow_at_Banff_lumped_era5_run_1_runs_def.nc
docs/: PHYSICS_MAPPING.md
examples/: multi_basin_gpu.cu  parameter_optimization.py  single_basin.cpp
include/cfuse/: enzyme_ad.hpp  kernels.hpp  physics.hpp  solver.hpp  state.hpp
include/dfuse/: config.hpp  dfuse.hpp  enzyme_ad.hpp  kernels.hpp  netcdf_io.hpp  physics.hpp  routing.hpp  solver.hpp  state.hpp
python/: CMakeCache.txt  CTestTestfile.cmake  Makefile  README.md  benchmark.py  bindings.cpp  bindings.cpp.bak  cmake_install.cmake  compare_fortran.py  dfuse.py  dfuse_cli.py  dfuse_netcdf.py  diagnose_nan.py  optimize_basin.py  validate_all_combinations.py  validate_all_decisions.py  validate_decisions.py
python/cfuse/: __init__.py  cli.py  config.py  legacy.py
python/dfuse/: __init__.py
python/validation_results/: validation_report.txt  validation_results.json
src/: dfuse_cli.cpp
tests/: test_comprehensive.cpp  test_comprehensive_python.py  test_cpu.cpp  test_cuda.cu  test_fortran_validation.cpp  test_python_batch_smoke.py
